fix img-wrap

--- a/source/scss/anti-gravel.scss
+++ b/source/scss/anti-gravel.scss
@@ -29,7 +29,7 @@
 
 .anti-gravel__car-wrap {
     position: absolute;
-    transform: translateX(-50%);
+    transform: translateX(calc(-50% - 15px));
     text-align: right;
     & img {
         width: 50%;
