--- a/source/scss/polishing.scss
+++ b/source/scss/polishing.scss
@@ -26,7 +26,7 @@
 
 .polishing-page__car-wrap {
     position: absolute;
-    transform: translateX(-50%);
+    transform: translateX(calc(-50% - 15px));
     text-align: right;
     & img {
         width: 50%;
